...
    <string name="dynamic_color_label">Dynamic Color</string>
    <string name="overlay_position_label">Overlay position</string>
    <string name="overlay_position_top">Top</string>
    <string name="overlay_position_bottom">Bottom</string>
    <string name="battery_optimization_label">Disable battery optimization</string>
    <string name="unknown_device_warning">Unknown Apple device detected. Tap to report.</string>
    <string name="unknown_device_sheet_title">Report Unknown Device</string>
    <string name="unknown_device_sheet_description">Model code %1$s was detected. What device were you trying to connect?</string>
    <string name="unknown_device_name_label">Device name</string>
    <string name="unknown_device_report_button">Report</string>
    <string name="rssi_threshold_label">Signal Strength Filter</string>
    <string name="rssi_threshold_all">All devices</string>
    <string name="rssi_threshold_medium">Medium range (~5m)</string>
    <string name="rssi_threshold_near">Near range (~2m)</string>
    <string name="rssi_threshold_very_near">Very near (~1m)</string>
</resources>
...
